Fix Small viewport alignment

--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -127,6 +127,9 @@ h4.smallHeadlineMain {
   color: white;
   text-align: center;
   margin: 5vh auto 0; }
+  @media (max-width: 340px) and (orientation: portrait), (max-height: 360px) {
+    .mainTitleLinkDiv {
+      margin: auto; } }
   .mainTitleLinkDiv a {
     animation: type 1s forwards;
     margin: auto;
@@ -157,7 +160,7 @@ h4.smallHeadlineMain {
     @media (max-width: 340px) {
       .mainTitleLinkDiv a {
         font-size: 27.5px; } }
-    @media (max-width: 340px) and (orientation: portrait) {
+    @media (max-width: 340px) and (orientation: portrait), (max-height: 360px) {
       .mainTitleLinkDiv a {
         font-size: 20px; } }
   .mainTitleLinkDiv a:nth-last-child(1) {
